--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^0.23.1",
     "express": "^4.11.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "mapbox-gl": "^0.40.1",
     "node-jsx": "^0.13.3",
     "node-noop": "^1.0.0",
     "nodemon": "^1.11.0",
